Fix sticky position mobile hooks.

--- a/cocktail.css
+++ b/cocktail.css
@@ -1343,6 +1343,11 @@
     position: fixed;
   }
 
+  .sticky--sm {
+    position: -webkit-sticky;
+    position: sticky;
+  }
+
   .width-full--sm {
     width: 100%;
   }
@@ -2062,6 +2067,11 @@
 
   .fixed--md {
     position: fixed;
+  }
+
+  .sticky--md {
+    position: -webkit-sticky;
+    position: sticky;
   }
 
   .width-full--md {
@@ -2785,6 +2795,11 @@
     position: fixed;
   }
 
+  .sticky--lg {
+    position: -webkit-sticky;
+    position: sticky;
+  }
+
   .width-full--lg {
     width: 100%;
   }
@@ -3506,6 +3521,11 @@
     position: fixed;
   }
 
+  .sticky--xl {
+    position: -webkit-sticky;
+    position: sticky;
+  }
+
   .width-full--xl {
     width: 100%;
   }
@@ -4225,6 +4245,11 @@
 
   .fixed--xxl {
     position: fixed;
+  }
+
+  .sticky--xxl {
+    position: -webkit-sticky;
+    position: sticky;
   }
 
   .width-full--xxl {
