--- a/scss/_position.scss
+++ b/scss/_position.scss
@@ -42,7 +42,7 @@
   }
 }
 
-.fixed {
+.sticky {
   position: sticky;
   @each $nameBreakpointSuffix, $valueBreakpointSuffix in $breakpointSuffixList {
     &--#{$nameBreakpointSuffix} {
